# AnimeRecommendationBot

./: .gitignore
bot/: Cargo.toml
bot/src/: db.rs  main.rs
dev/notebooks/: EDA + data preprocessing.ipynb  create embeddings.ipynb  create_db.ipynb
src/: pyproject.toml
src/app/bot/: bot.py
src/app/db/: db_connection.py
src/app/recsys/: utils.py
src/config/: config.py
src/notebooks/: test.ipynb
