[tool.poetry]
name = "animerecommendation"
version = "0.1.0"
description = "Amazing recsys for anime!"
authors = ["Aleksandr Klokov <klokov55@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
ruff = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
